--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
@@ -26,7 +26,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "bootstrap": "^4.4.1",
     "ngx-bootstrap": "^5.3.2",
+    "ngx-bootstrap-multiselect-dropdown": "^1.0.10",
     "ngx-select-ex": "^3.7.6",
+    "ngx-toastr": "^11.3.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
